# astrosurge

./: .Dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.api  Dockerfile.webapp  HANDOFF.md  PRD.md  PROJECT_UPDATE.md  README.md  agent_tools.py  agent_tools_old.py  api.py  api_toc.md  app.py  app_new.py  asteroid.json  build.sh  commodities.py  commodities2.py  conftest.py  demo_commodity_pricing.py  demo_enhanced_pricing.py  demo_standalone_pricing.py  docker-compose.yml  env.example  find_asteroids.py  find_elements.py  find_my_ip.py  find_value.py  flask_app.py  full_name_lstrip.py  generate_logo.py  gunicorn_config.py  logging_config.py  main.py  manage_companies.py  manage_elements.py  manage_mission.py  (+31 more)
amos/: __init__.py  event_processor.py  manage_asteroids.py  manage_elements.py  manage_mission.py  manage_ships.py  manage_users.py  mine_asteroid.py  mission_simulator.py
api/: __init__.py  asteroid_routes.py  element_routes.py  mission_routes.py  routes.py  ship_routes.py  simulation_routes.py  user_routes.py
config/: __init__.py  logging_config.py  model_config.py  mongodb_config.py
docs/: api_toc.md  goals.md  pid.md  progress_checklist.md  project_plan.md  schema_design.md
legacy/: asteroid_bennu.json  execute_mission.py  find_asteroids.py  find_value.py  legacy_simulator.py  manage_companies.py  manage_elements.py  manage_mission.py  manage_ship.py  mine_asteroid.py  mine_for_gold.py  mission.json  test_api.py
models/: __init__.py  models.py
modules/: execute_mission.py  find_value.py  manage_asteroids.py  manage_mission.py  (+3 more)
(+132 files in other folders)
