[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrosurge"
version = "0.1.0"
description = "Agentic asteroid mining simulation"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pymongo>=4.6.0",
    "openai>=1.12.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "rich>=13.7.0",
    "python-dateutil>=2.8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# No database required — tests use fixtures, not live MongoDB
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-p no:cacheprovider",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require MongoDB)",
    "slow: Slow tests that take more than a few seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
